--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
 @import url(./blocks/place-card/place-card.css);
 @import url(./blocks/place-card/__image/place-card__image.css);
 @import url(./blocks/place-card/__liked/place-card__liked.css);
-@import url(./blocks/place-card/__recycleButton/place-card__recycleButton.css);
+@import url(blocks/place-card/__recycleButton/place-card__recycleButton.css);
 @import url(./blocks/place-card/__like-button/place-card__like-button.css);
 @import url(./blocks/place-card/__like-count/place-card__like-count.css);
 @import url(./blocks/place-card/__label/place-card__label.css);
@@ -53,3 +53,5 @@
 @import url(./blocks/popup-avatar-edit/__input/popup-avatar-edit__input.css);
 @import url(./blocks/profile/__avatar-edit-button/profile__avatar-edit-button.css);
 @import url(./blocks/profile/profile__avatar-container/profile__avatar-container.css);
+@import url(./blocks/place-card/__recycleButton/place-card__recycleButton_visible.css);
+@import url(./blocks/place-card/__recycleButton/place-card__recycleButton_hidden.css);
