--- a/src/blocks/popup/__save-button/popup__save-button.css
+++ b/src/blocks/popup/__save-button/popup__save-button.css
@@ -1,40 +1,40 @@
 .popup__save-button {
-    justify-content: center;
-    display: flex;
-    margin: 48px 0 36px;
-    align-items: center;
-    border-radius: 2px;
-    width: 100%;
-    border: none;
-    box-shadow: none;
-    background-color: black;
-    padding: 14px;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 22px;
-    color: white;
+  justify-content: center;
+  display: flex;
+  margin: 48px 0 36px;
+  align-items: center;
+  border-radius: 2px;
+  width: 100%;
+  border: none;
+  box-shadow: none;
+  background-color: black;
+  padding: 14px;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  color: white;
 }
 
 .popup__save-button:hover {
-    opacity: 0.8;
-    cursor: pointer;
+  opacity: 0.8;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 320px) and (max-width: 1023px) {
-    .popup__save-button {
-        margin: 36px 0 30px;
-        padding: 12px 0 14px;
-        font-size: 14px;
-        line-height: 17px;
-    }
+  .popup__save-button {
+    margin: 36px 0 30px;
+    padding: 12px 0 14px;
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
 
 .popup__save-button:disabled {
-    color: #B8B8B8;
-    background: #EDEDED;
-    pointer-events: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  color: #b8b8b8;
+  background: #ededed;
+  pointer-events: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
